Add ROCK 3A to download page

--- a/index.html
+++ b/index.html
@@ -1129,7 +1129,7 @@
 					</div>
 				</div>
 				<!-- Radxa Zero -->
-				<div id="radxa" class="toggleDiv single-project">
+				<div id="radxazero" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Radxa Zero</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1149,6 +1149,26 @@
 							<p><i style="color:grey;font-size:80%;">NB: No eMMC on 512 MiB and 1 GiB model, only 8 GiB eMMC for 2 GiB RAM model, larger eMMC only available for 4 GiB RAM model</i></p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/radxazero.jpg" alt="Radxa Zero photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- ROCK 3A -->
+				<div id="radxa3a" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 3A</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3568 2.0 GHz | 4 cores | ARMv8</div>
+								<div><span>RAM:</span>2 GiB - 8 GiB LPDDR4</div>
+								<div><span>USB:</span>USB 3.0 OTG and HOST</div>
+								<div><span>NET:</span>GiB Ethernet, optional Radxa Wireless Module</div>
+								<div><span>Storage:</span>microSD, eMMC and M.2 sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_ROCK3A-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>Radxa's new mid-range SBC, featuring the new Rockchip RK3568 SoC with 4x Cortex A55 CPU @2.0 GHz</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="portfolio-grid" class="row" style="display:none">
@@ -1272,10 +1292,17 @@
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
-						<a href="#downloadinfo" class="thumbnail show_hide" rel="#radxa">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#radxazero">
 							<img src="images/sbc_images/radxazero.jpg" alt="Radxa Zero photo" width="8" height="5" loading="lazy">
 							<h3>Radxa Zero</h3>
 							<p>S905Y2 1.8GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#radxa3a">
+							<img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy">
+							<h3>ROCK 3A</h3>
+							<p>RK3568 | 4 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix allo">
