Adding Beta v8.11 slide

--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.10 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>An image for Radxa ROCK 3A has been added. <a href="https://dietpi.com/docs/software/gaming/#amiberry" target="_blank" rel="noopener">Amiberry</a>, <a href="https://dietpi.com/docs/software/cloud/#vaultwarden" target="_blank" rel="noopener">vaultwarden</a>, <a href="https://dietpi.com/docs/software/media/#squeezelite" target="_blank" rel="noopener">Squeezelite</a>, <a href="https://dietpi.com/docs/software/media/#shairport-sync" target="_blank" rel="noopener">Shairport Sync</a> and <a href="https://dietpi.com/docs/software/media/#gmediarender" target="_blank" rel="noopener">GMediaRender</a> all updated and enhanced. <a href="https://dietpi.com/docs/software/home_automation/#home-assistant" target="_blank" rel="noopener">Home Assistant</a> now includes <a href="https://hacs.xyz/" target="_blank" rel="noopener">HACS</a> by default.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_10/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi Beta v8.11 is here</h2>
+					<h4>Please help testing our next release</h4>
+					<p>PINE64 Quartz64 update enables onboard WiFi and fixes boot issues. FriendlyELEC NanoPi R5S image update supports WireGuard. Homer web dashboard software added. Shairport Sync now supports AirPlay 2.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5874" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
