Fix NanoPi M4 naming

--- a/index.html
+++ b/index.html
@@ -946,7 +946,7 @@
 					</div>
 				</div>
 				<div id="slidingdiv37" class="toggleDiv single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>NanoPC M4</h3><span class="show_hide close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi M4</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
@@ -960,7 +960,7 @@
 							</div>
 							<p>Little brother of the NanoPC T4 with same SoC (RK3399) performance but a few less features, like no onboard eMMC chip (but socket) and no M.2 socket. However the form factor is RPi-like which might suite certain use-cases.</p>
 						</div>
-						<div class="col-md-6"><img src="images/sbc_images/nanopim4.jpg" alt="NanoPC M4 photo" width="8" height="5" loading="lazy"></div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopim4.jpg" alt="NanoPi M4 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="slidingdiv38" class="toggleDiv single-project">
