Update/fix SBC info

--- a/index.html
+++ b/index.html
@@ -337,7 +337,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Allwinner H3 1.0 GHz | 4 cores | ARMv7</div>
+								<div><span>CPU:</span>Allwinner H3 1.2 GHz | 4 cores | ARMv7</div>
 								<div><span>RAM:</span>256 MiB - 512 MiB DDR3</div>
 								<div><span>NET:</span>100 Mbit Ethernet</div>
 								<br>
@@ -354,7 +354,7 @@
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Allwinner H3 1.0 GHz | 4 cores | ARMv7</div>
+								<div><span>CPU:</span>Allwinner H3 1.2 GHz | 4 cores | ARMv7</div>
 								<div><span>RAM:</span>512 MiB DDR3</div>
 								<div><span>NET:</span>Onboard WiFi 4 (802.11n)</div>
 								<div><span>Storage:</span>8 GiB eMMC</div>
@@ -368,13 +368,13 @@
 					</div>
 				</div>
 				<div id="slidingdiv8" class="toggleDiv single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi M1/T1</h3><span class="show_hide close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi M1</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>Allwinner H3 1.2/1.5 GHz | 4 cores | ARMv7</div>
+								<div><span>CPU:</span>Allwinner H3 1.2 GHz | 4 cores | ARMv7</div>
 								<div><span>RAM:</span>512 MiB - 1 GiB DDR3</div>
-								<div><span>Storage:</span>T1: 8 GiB eMMC</div>
+								<div><span>NET:</span>100 Mbit Ethernet</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiM1-ARMv7-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
@@ -1372,14 +1372,14 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv6">
 							<img src="images/sbc_images/nanopineo.jpg" alt="NanoPi NEO photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi NEO</h3>
-							<p>H3 1.0 GHz | 4 cores | ARMv7</p>
+							<p>H3 1.2 GHz | 4 cores | ARMv7</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv7">
 							<img src="images/sbc_images/nanopineoair.jpg" alt="NanoPi NEO Air photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi NEO Air</h3>
-							<p>H3 1.0 GHz | 4 cores | ARMv7</p>
+							<p>H3 1.2 GHz | 4 cores | ARMv7</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
@@ -1434,7 +1434,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv8">
 							<img src="images/sbc_images/nanopim1.jpg" alt="NanoPi M1 photo" width="8" height="5" loading="lazy">
-							<h3>NanoPi M1/T1</h3>
+							<h3>NanoPi M1</h3>
 							<p>H3 1.2 GHz | 4 cores | ARMv7</p>
 						</a>
 					</div>
@@ -1456,21 +1456,21 @@
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv9">
 							<img src="images/sbc_images/nanopim2.jpg" alt="NanoPi M2 photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi M2/T2</h3>
-							<p>Samsung 1.4 GHz | 4 cores | ARMv7</p>
+							<p>S5P4418 1.4 GHz | 4 cores | ARMv7</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv10">
 							<img src="images/sbc_images/nanopim3.jpg" alt="NanoPi M3 photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi M3/T3</h3>
-							<p>Samsung 1.4 GHz | 8 cores | ARMv8</p>
+							<p>S5P6818 1.4 GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#slidingdiv21">
 							<img src="images/sbc_images/nanopifire3.jpg" alt="NanoPi Fire3 photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi Fire3</h3>
-							<p>Samsung 1.4 GHz | 8 cores | ARMv8</p>
+							<p>S5P6818 1.4 GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
