--- a/index.html
+++ b/index.html
@@ -223,41 +223,82 @@
 					<button class="nav-link filter" data-filter=".x86_64">PC/VM</button>
 					<button class="nav-link filter" data-filter=".other">Other</button>
 				</nav>
-				<div id="raspberrypi" class="toggleDiv single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>Raspberry Pi</h3><span class="show_hide close"></span></div></div>
+				<div id="raspberrypi1" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Raspberry Pi 1/Zero (1)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
-								<div><span>CPU:</span>BCM2835 ARMv6 RPi1 - BCM2711 ARMv8 RPi4</div>
-								<div><span>RAM:</span>256 MiB RPi1 - 8 GiB RPi4</div>
+								<div><span>CPU:</span>BCM2708 900/1000 MHz | 1 Core | ARMv6</div>
+								<div><span>RAM:</span>256 MiB - 512 MiB LPDDR2</div>
 								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye.7z"><span>ARMv6 32-bit image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Uses the Raspbian package repository and works on <b>ALL</b> Raspberry Pi models. Use this image if unsure!
-								</div>
-								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye.7z"><span>ARMv7 32-bit image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Uses the Debian package repository and does <b>NOT</b> work on Raspberry Pi 1 and Zero (1) models.
-								</div>
-								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye.7z"><span>ARMv8 64-bit image:</span><i class="fa fa-download"></i><u>Download</u></a>
-									<br>Uses the Debian package repository and does <b>NOT</b> work on Raspberry Pi 1, Zero (1) and Raspberry Pi 2 v1.1 models.
-								</div>
-								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye_Amiberry.7z"><span>Amiberry ARMv6 image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye_Amiberry.7z"><span>Amiberry image:</span><i class="fa fa-download"></i><u>Download</u></a>
 									<br>This image installs and boots into <a href="https://dietpi.com/docs/software/gaming/#amiberry" target="_blank" rel="noopener" style="text-decoration-line:underline;">Amiberry</a> automatically on first boot.
 								</div>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye_Amiberry.7z"><span>Amiberry ARMv7 image:</span><i class="fa fa-download"></i><u>Download</u></a>
-								</div>
-								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye_AlloGUI.7z"><span>Allo GUI ARMv7 image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv6-Bullseye_AlloGUI.7z"><span>Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
 									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
 								</div>
-								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
+							<p>These images are compatible with all Raspberry Pi models, but we recommend it only for Raspberry Pi 1 and Zero (1) models.</p>
 						</div>
-						<div class="col-md-6"><img src="images/sbc_images/raspberrypi3.jpg" alt="Raspberry Pi photo" width="8" height="5" loading="lazy"></div>
+						<div class="col-md-6"><img src="images/sbc_images/raspberrypi1.jpg" alt="Raspberry Pi 1 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<div id="raspberrypi2" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Raspberry Pi 2 PCB v1.1</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>BCM2709 900 MHz | 4 Cores | ARMv7</div>
+								<div><span>RAM:</span>1 GiB LPDDR2</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye_Amiberry.7z"><span>Amiberry image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>This image installs and boots into <a href="https://dietpi.com/docs/software/gaming/#amiberry" target="_blank" rel="noopener" style="text-decoration-line:underline;">Amiberry</a> automatically on first boot.
+								</div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv7-Bullseye_AlloGUI.7z"><span>Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
+								</div>
+							</div>
+							<p>
+								These images are compatible with all Raspberry Pi 2, 3 and 4 models, but we recommend it only for Raspberry Pi 2 PCB v1.1, or if you require a 32-bit system explicitly.
+								<br>The Raspberry Pi 2 comes in two versions, which is printed onto the PCB. PCB v1.1 has an ARMv7 chip, hence needs to use this image, PCB v1.2 can use the ARMv8 image, which we then generally recommend.
+							</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/raspberrypi2.jpg" alt="Raspberry Pi 2 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<div id="raspberrypi4" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>Raspberry Pi 2/3/4</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>BCM2710/2711 900-1800 MHz | 4 Cores | ARMv8</div>
+								<div><span>RAM:</span>1 GiB LPDDR2 - 8 GiB LPDDR4</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye_Amiberry.7z"><span>Amiberry image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>This image installs and boots into <a href="https://dietpi.com/docs/software/gaming/#amiberry" target="_blank" rel="noopener" style="text-decoration-line:underline;">Amiberry</a> automatically on first boot.
+								</div>
+								<div>
+									<a href="https://dietpi.com/downloads/images/DietPi_RPi-ARMv8-Bullseye_AlloGUI.7z"><span>Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
+								</div>
+							</div>
+							<p>
+								These images are compatible with all Raspberry Pi 3 and 4 models, as well as Raspberry Pi 2 PCB v1.2 and Zero 2.
+								<br>The Raspberry Pi 2 comes in two versions, which is printed onto the PCB. PCB v1.1 has an ARMv7 chip, hence needs to use the ARMv7 image, PCB v1.2 can use this ARMv8 image, which we then generally recommend.
+							</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/raspberrypi4.jpg" alt="Raspberry Pi 4 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="odroidc1" class="toggleDiv single-project">
@@ -307,7 +348,7 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_OdroidXU4-ARMv7-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 							</div>
-							<p>The XU4 is a powerhouse performance monster SBC and features USB 3.0, which makes it great for a NAS system. However, the XU4 does suffer from excessive heat at full load, you can expect 3-5 seconds at full load, before thermal throttling kicks in @ 95'c and reduces clocks. Aside from this, the XU4 is one of the most powerful SBC on the market today and features a much welcomed USB 3.0 support. It also looks great with Odroid-CloudShell and DietPi-CloudShell stats!</p>
+							<p>The XU4 is a powerhouse performance monster SBC and features USB 3.0, which makes it great for a NAS system. However, the XU4 does suffer from excessive heat at full load, you can expect 3-5 seconds at full load, before thermal throttling kicks in @ 95 °C and reduces clocks. Aside from this, the XU4 is one of the most powerful SBC on the market today and features a much welcomed USB 3.0 support. It also looks great with Odroid-CloudShell and DietPi-CloudShell stats!</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/odroidxu4.jpg" alt="Odroid XU4 photo" width="8" height="5" loading="lazy"></div>
 					</div>
@@ -596,7 +637,7 @@
 								<div><a href="https://dietpi.com/downloads/images/DietPi_SparkySBC-ARMv7-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
 								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
 								<div>
-									<a href="https://dietpi.com/downloads/images/DietPi_SparkySBC-ARMv7-Bullseye_AlloGUI.7z"><span>DL Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
+									<a href="https://dietpi.com/downloads/images/DietPi_SparkySBC-ARMv7-Bullseye_AlloGUI.7z"><span>Allo GUI image:</span><i class="fa fa-download"></i><u>Download</u></a>
 									<br>This image has our <a href="https://dietpi.com/forum/t/dietpi-allo-com-web-gui-image/1523" target="_blank" rel="noopener" style="text-decoration-line:underline;">Allo web GUI</a> and audiophile software pre-installed.
 								</div>
 							</div>
@@ -1170,10 +1211,24 @@
 				</div>
 				<div id="portfolio-grid" class="row" style="display:none">
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
-						<a href="#downloadinfo" class="thumbnail show_hide" rel="#raspberrypi">
-							<img src="images/sbc_images/raspberrypi3.jpg" alt="Raspberry Pi photo" width="8" height="5" loading="lazy">
-							<h3>Raspberry Pi</h3>
-							<p>All models</p>
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#raspberrypi1">
+							<img src="images/sbc_images/raspberrypi1.jpg" alt="Raspberry Pi 1 photo" width="8" height="5" loading="lazy">
+							<h3>Raspberry Pi 1/Zero (1)</h3>
+							<p>BCM2708 | 1 Core | ARMv6</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#raspberrypi2">
+							<img src="images/sbc_images/raspberrypi2.jpg" alt="Raspberry Pi 2 photo" width="8" height="5" loading="lazy">
+							<h3>Raspberry Pi 2 PCB v1.1</h3>
+							<p>BCM2709 | 4 Cores | ARMv7</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#raspberrypi4">
+							<img src="images/sbc_images/raspberrypi4.jpg" alt="Raspberry Pi 4 photo" width="8" height="5" loading="lazy">
+							<h3>Raspberry Pi 2/3/4</h3>
+							<p>BCM2710/2711 | 4 Cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix odroid">
