--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -80,7 +80,7 @@
 					<button class="nav-link filter" data-filter=".Camera">Camera</button>
 					<button class="nav-link filter" data-filter=".Cloud">Cloud & Backup</button>
  					<button class="nav-link filter" data-filter=".Social">Social & Search</button>
- 					<button class="nav-link filter" data-filter=".WiFi">WiFi HotSpot</button>
+ 					<button class="nav-link filter" data-filter=".WiFi">Advanced Networking</button>
  					<button class="nav-link filter" data-filter=".Automation">Home Automation</button>
  					<button class="nav-link filter" data-filter=".HardwareProjects">Hardware Projects</button>
  					<button class="nav-link filter" data-filter=".RemoteAccess">Remote Access</button>
