Add v8.12 release slider

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi Beta v8.12 is here</h2>
-					<h4>Please help testing our next release</h4>
+					<h2>DietPi v8.12 has been released</h2>
+					<h4>Check out all changes</h4>
 					<p>Support for NanoPi R6S and ROCK 5B added. Radxa Zero USB OTG enabled and Odroid C2 USB support fixed. DietPi-Backup free space check now optional, and NFS space check corrected. Many smaller software enhancements.</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/5969" target="_blank" rel="noopener">All info</a>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_12/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
