Add NanoPi R6S and ROCK 5B to download page

--- a/index.html
+++ b/index.html
@@ -1128,6 +1128,26 @@
 						<div class="col-md-6"><img src="images/sbc_images/nanopir5s.jpg" alt="NanoPi R5S photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<!-- NanoPi R6S -->
+				<div id="nanopir6s" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R6S</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>8 GiB LPDDR4</div>
+								<div><span>USB:</span>USB 3.0 + USB 2.0</div>
+								<div><span>NET:</span>2x 2.5 Gbit + 1x 1 Gbit Ethernet</div>
+								<div><span>Storage:</span>32 GiB eMMC</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_NanoPiR6S-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>FriendlyELEC's new flagship mini router SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/nanopir6s.jpg" alt="NanoPi R6S photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<!-- Pinebook Pro -->
 				<div id="pinebookpro" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Pinebook Pro</h3><span class="show_hide close"></span></div></div>
@@ -1190,7 +1210,7 @@
 					</div>
 				</div>
 				<!-- ROCK 3A -->
-				<div id="radxa3a" class="toggleDiv single-project">
+				<div id="rock3a" class="toggleDiv single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 3A</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -1198,7 +1218,7 @@
 								<div><span>CPU:</span>Rockchip RK3568 2.0 GHz | 4 cores | ARMv8</div>
 								<div><span>RAM:</span>2 GiB - 8 GiB LPDDR4</div>
 								<div><span>USB:</span>USB 3.0 OTG and HOST</div>
-								<div><span>NET:</span>GiB Ethernet, optional Radxa Wireless Module</div>
+								<div><span>NET:</span>Gbit Ethernet, optional Radxa Wireless Module</div>
 								<div><span>Storage:</span>microSD, eMMC and M.2 sockets</div>
 								<br>
 								<div><a href="https://dietpi.com/downloads/images/DietPi_ROCK3A-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
@@ -1207,6 +1227,26 @@
 							<p>Radxa's new mid-range SBC, featuring the new Rockchip RK3568 SoC with 4x Cortex A55 CPU @2.0 GHz</p>
 						</div>
 						<div class="col-md-6"><img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
+				<!-- ROCK 5B -->
+				<div id="rock5b" class="toggleDiv single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>ROCK 5B</h3><span class="show_hide close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>Rockchip RK3588 1.8/2.4 GHz | 8 cores | ARMv8</div>
+								<div><span>RAM:</span>4 GiB - 16 GiB LPDDR4</div>
+								<div><span>USB:</span>USB 3.0 OTG and HOST</div>
+								<div><span>NET:</span>2.5 Gbit Ethernet, optional Radxa Wireless Module</div>
+								<div><span>Storage:</span>microSD and eMMC sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/downloads/images/DietPi_ROCK5B-ARMv8-Bullseye.7z"><span>Download Image:</span><i class="fa fa-download"></i><u>Download</u></a></div>
+								<div><a href="https://dietpi.com/docs/install/" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>Radxa's new flagship SBC, featuring the new Rockchip RK3588 SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/rock5b.jpg" alt="ROCK 5B photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="portfolio-grid" class="row" style="display:none">
@@ -1351,10 +1391,17 @@
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
-						<a href="#downloadinfo" class="thumbnail show_hide" rel="#radxa3a">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#rock3a">
 							<img src="images/sbc_images/rock3a.jpg" alt="ROCK 3A photo" width="8" height="5" loading="lazy">
 							<h3>ROCK 3A</h3>
 							<p>RK3568 | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix radxa">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#rock5b">
+							<img src="images/sbc_images/rock5b.jpg" alt="ROCK 5B photo" width="8" height="5" loading="lazy">
+							<h3>ROCK 5B</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix allo">
@@ -1411,6 +1458,13 @@
 							<img src="images/sbc_images/nanopir5s.jpg" alt="NanoPi R5S photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi R5S</h3>
 							<p>RK3568 2.0GHz | 4 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
+						<a href="#downloadinfo" class="thumbnail show_hide" rel="#nanopir6s">
+							<img src="images/sbc_images/nanopir6s.jpg" alt="NanoPi R6S photo" width="8" height="5" loading="lazy">
+							<h3>NanoPi R6S</h3>
+							<p>RK3588 2.4GHz | 8 cores | ARMv8</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
