Add NanoPi R5C and DietPi Beta v8.13 slider

--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.12 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>Support for NanoPi R6S and ROCK 5B added. Radxa Zero USB OTG enabled and Odroid C2 USB support fixed. DietPi-Backup free space check now optional, and NFS space check corrected. Many smaller software enhancements.</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_12/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi Beta v8.13 is here</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>FriendlyELEC NanoPi R5C support was added. Amiberry, NoMachine and vaultwarden packages were updated to latest versions. The UrBackup backup path can now be pre-configured via new dietpi.txt setting.</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/6050" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
@@ -1109,9 +1109,9 @@
 						<div class="col-md-6"><img src="images/sbc_images/nanopir4s.jpg" alt="NanoPi R4S photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
-				<!-- NanoPi R5S -->
+				<!-- NanoPi R5S/R5C -->
 				<div id="nanopir5s" class="toggleDiv single-project">
-					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R5S</h3><span class="show_hide close"></span></div></div>
+					<div class="row"><div class="col-md-12 project-title"><h3>NanoPi R5S/R5C</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
 							<div class="project-info">
@@ -1456,7 +1456,7 @@
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix nanopi">
 						<a href="#downloadinfo" class="thumbnail show_hide" rel="#nanopir5s">
 							<img src="images/sbc_images/nanopir5s.jpg" alt="NanoPi R5S photo" width="8" height="5" loading="lazy">
-							<h3>NanoPi R5S</h3>
+							<h3>NanoPi R5S/R5C</h3>
 							<p>RK3568 2.0GHz | 4 cores | ARMv8</p>
 						</a>
 					</div>
