--- a/contribute.html
+++ b/contribute.html
@@ -33,12 +33,12 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css?v=2">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=6">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=7">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js?v=2"></script>
 		<script defer src="js/mixitup.min.js"></script>
-		<script defer src="js/app.min.js"></script>
+		<script defer src="js/app.min.js?v=1"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
@@ -94,7 +94,7 @@
 					<button class="nav-link filter" data-filter=".Expand">Expand code / documentation</button>
 				</nav>
 				<!-- Bug report -->
-				<div id="bugreport" class="toggleDiv single-project">
+				<div id="bugreport" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Create a new bug report / Report a security issue</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -108,7 +108,7 @@
 					</div>
 				</div>
 				<!-- Diagnose -->
-				<div id="diagnose" class="toggleDiv single-project">
+				<div id="diagnose" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Investigate issues / Provide help</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -129,7 +129,7 @@
 					</div>
 				</div>
 				<!-- Question -->
-				<div id="question" class="toggleDiv single-project">
+				<div id="question" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Answer questions / Provide insights</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -140,7 +140,7 @@
 					</div>
 				</div>
 				<!-- Test -->
-				<div id="test" class="toggleDiv single-project">
+				<div id="test" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Test configurations</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -157,7 +157,7 @@
 					</div>
 				</div>
 				<!-- Improve website -->
-				<div id="improvewebsite" class="toggleDiv single-project">
+				<div id="improvewebsite" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Improve DietPi website</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -169,7 +169,7 @@
 					</div>
 				</div>
 				<!-- Improve docs -->
-				<div id="improvedocs" class="toggleDiv single-project">
+				<div id="improvedocs" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Expand DietPi Docs</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -180,7 +180,7 @@
 					</div>
 				</div>
 				<!-- Suggest -->
-				<div id="suggest" class="toggleDiv single-project">
+				<div id="suggest" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>New feature suggestions & Software titles</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -194,7 +194,7 @@
 					</div>
 				</div>
 				<!-- Code -->
-				<div id="code" class="toggleDiv single-project">
+				<div id="code" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Extend DietPi</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -213,7 +213,7 @@
 					</div>
 				</div>
 				<!-- Community -->
-				<div id="community" class="toggleDiv single-project">
+				<div id="community" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Use DietPi Forum</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -228,7 +228,7 @@
 					</div>
 				</div>
 				<!-- Blog -->
-				<div id="blog" class="toggleDiv single-project">
+				<div id="blog" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Write about DietPi</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -242,7 +242,7 @@
 					</div>
 				</div>
 				<!-- Social -->
-				<div id="social" class="toggleDiv single-project">
+				<div id="social" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Social media</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-6 project-description">
@@ -366,7 +366,7 @@
 		<!-- Scroll up button end -->
 		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
 		<script>
-			document.querySelectorAll('div.toggleDiv').forEach(function(e){e.setAttribute("style","display:none");});
+			document.querySelectorAll('div.single-project').forEach(function(e){e.setAttribute("style","display:none");});
 			document.getElementById("contributeinfo").removeAttribute("style");
 			document.getElementById("portfolio-grid").removeAttribute("style");
 		</script>
