--- a/stats.html
+++ b/stats.html
@@ -33,12 +33,12 @@
 		<meta name="theme-color" content="#000000">
 		<!-- Load CSS styles -->
 		<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css?v=2">
-		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=6">
+		<link rel="stylesheet" type="text/css" href="css/style.min.css?v=7">
 		<!-- Include JavaScript -->
 		<script defer src="js/jquery.min.js"></script>
 		<script defer src="js/bootstrap.min.js?v=2"></script>
 		<script defer src="js/mixitup.min.js"></script>
-		<script defer src="js/app.min.js"></script>
+		<script defer src="js/app.min.js?v=1"></script>
 	</head>
 	<body>
 		<nav class="navbar navbar-expand-lg">
@@ -75,7 +75,7 @@
 					<button class="nav-link filter" data-filter=".armbian">Armbian</button>
 					<button class="nav-link filter" data-filter=".debian">Debian</button>
 				</nav>
-				<div id="commands" class="toggleDiv single-project">
+				<div id="commands" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>Commands to derive data</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -96,7 +96,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="raspberrypios1" class="toggleDiv single-project">
+				<div id="raspberrypios1" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Raspberry Pi OS Lite (32-bit)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -120,7 +120,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="raspberrypios2" class="toggleDiv single-project">
+				<div id="raspberrypios2" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Raspberry Pi OS Lite (64-bit)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -144,7 +144,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="armbian1" class="toggleDiv single-project">
+				<div id="armbian1" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -168,7 +168,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="armbian2" class="toggleDiv single-project">
+				<div id="armbian2" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -192,7 +192,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="armbian3" class="toggleDiv single-project">
+				<div id="armbian3" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Armbian (server image)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -216,7 +216,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="debian1" class="toggleDiv single-project">
+				<div id="debian1" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Debian (server image)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -240,7 +240,7 @@
 						</div>
 					</div>
 				</div>
-				<div id="debian2" class="toggleDiv single-project">
+				<div id="debian2" class="single-project">
 					<div class="row"><div class="col-md-12 project-title"><h3>DietPi vs Debian (server image)</h3><span class="show_hide close"></span></div></div>
 					<div class="row">
 						<div class="col-md-12 project-description">
@@ -352,7 +352,7 @@
 		<!-- Scroll up button end -->
 		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
 		<script>
-			document.querySelectorAll('div.toggleDiv').forEach(function(e){e.setAttribute("style","display:none");});
+			document.querySelectorAll('div.single-project').forEach(function(e){e.setAttribute("style","display:none");});
 			document.getElementById("distrostats").removeAttribute("style");
 			document.getElementById("portfolio-grid").removeAttribute("style");
 		</script>
