Remove Orange Pi 5 image and convert to JPG
640x400 are required for the tile to be dimensioned and filled correctly. JPG is much (!) smaller with photos (not so much with graphics/logos) and we do not need the transparancy, which actually looks bad with the tiles background.

--- a/index.html
+++ b/index.html
@@ -1266,7 +1266,7 @@
 							</div>
 							<p>Orange pi new flagship SBC, featuring the new Rockchip RK3588S SoC: A quad-core 4x Cortex-A76 @2.4 GHz + 4x Cortex A55 @1.8 GHz is making this the by far fastest SoC ever tested with DietPi.</p>
 						</div>
-						<div class="col-md-6"><img src="images/sbc_images/orange-pi-5.png" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy"></div>
+						<div class="col-md-6"><img src="images/sbc_images/orange-pi-5.jpg" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
 				<div id="portfolio-grid" class="row" style="display:none">
@@ -1426,7 +1426,7 @@
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix orangepi">
 						<a href="#downloadinfo" class="thumbnail" rel="#orangepi5">
-							<img src="images/sbc_images/orange-pi-5.png" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy">
+							<img src="images/sbc_images/orange-pi-5.jpg" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy">
 							<h3>Orange Pi 5</h3>
 							<p>RK3588S 2.4GHz | 8 cores | ARMv8</p>
 						</a>
