Fix some image URLs and remove obsolete ones

--- a/dietpi-software.html
+++ b/dietpi-software.html
@@ -2203,7 +2203,7 @@
 				</div>
 				<!-- Start details for portfolio project 119 -->
 				<div id="frp" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/frp-dashhboard.png" target="_blank" rel="noopener"><img src="images/dietpi-software/frp-dashhboard.png" alt="frp GUI screenshot" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/frp-dashboard-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/frp-dashboard-small.png" alt="frp GUI screenshot" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -2779,7 +2779,7 @@
 				</div>
 				<!-- Start details for portfolio project 155 Jellyfin-->
 				<div id="jellyfin" class="row single-project">
-					<div class="col-md-4"><a href="https://dietpi.com/docs/assets/images/dietpi-software-media-jellyfin.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/jellyfin-screenshot-small.png" alt="Jellyfin GUI Screenshot" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/jellyfin-screenshot-large.jpg" target="_blank" rel="noopener"><img src="images/dietpi-software/jellyfin-screenshot-small.png" alt="Jellyfin GUI Screenshot" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -2971,7 +2971,7 @@
 				</div>
 				<!-- Start details for portfolio project 166 webstacks -->
 				<div id="webstacks" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/webserver-stacks-info-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/webserver-stacks-info-large.png" alt="LAMP info graphic" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/webserver-stacks-info-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/webserver-stacks-info-small.png" alt="LAMP info graphic" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
@@ -3011,7 +3011,7 @@
 				</div>
 				<!-- Start details for portfolio project 168 PHP composer -->
 				<div id="php-composer" class="row single-project">
-					<div class="col-md-4"><a href="images/dietpi-software/php-composer-screenshot-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/php-composer-screenshot-large.png" alt="Composer Screenshot" loading="lazy"></a></div>
+					<div class="col-md-4"><a href="images/dietpi-software/php-composer-screenshot-large.png" target="_blank" rel="noopener"><img src="images/dietpi-software/php-composer-screenshot-small.png" alt="Composer Screenshot" loading="lazy"></a></div>
 					<div class="col-md-8">
 						<div class="project-description">
 							<div class="project-title clearfix">
