Update copyright and sitemap dates

--- a/contribute.html
+++ b/contribute.html
@@ -55,10 +55,9 @@
 					<a class="nav-link" href="#contribute">CONTRIBUTE</a>
 					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
-				<!-- End main navigation -->
 			</div>
 		</nav>
-		<!-- Portfolio section start -->
+		<!-- Portfolio section -->
 		<div class="section secondary-section mixitup" id="contribute">
 			<div class="container-xl software">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
@@ -251,9 +250,7 @@
 						<div class="col-md-6"><img src="images/contribute/more-social.jpg" alt="Social" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
-				<!-- END details for portfolio -->
 				<div id="portfolio-grid" class="row" style="display:none">
-					<!-- Desktops -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Report">
 						<a href="#contributeinfo" class="thumbnail" rel="#bugreport">
 							<img src="images/contribute/diagnose.jpg" alt="Report an issue" width="8" height="5" loading="lazy">
@@ -289,7 +286,6 @@
 							<p>Help to improve & extend</p>
 						</a>
 					</div>
-					<!-- Remote desktop -->
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix Ideas">
 						<a href="#contributeinfo" class="thumbnail" rel="#improvedocs">
 							<img src="images/contribute/improve-docs.jpg" alt="Improve docs" width="8" height="5" loading="lazy">
@@ -335,8 +331,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- Portfolio section end -->
-		<!-- Footer section start -->
+		<!-- Footer section -->
 		<div class="section primary-section footer" id="contact">
 			<div class="container-xl">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
@@ -353,16 +348,14 @@
 					</a>
 				</div>
 				<br>
-				<p>&copy; 2022 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
+				<p>&copy; 2023 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
 				<p>&copy; 2013 Website theme by <a href="https://www.graphberry.com/" target="_blank" rel="noopener">Graphberry</a></p>
 				<p>DietPi web hosting is powered by <a href="https://myvirtualserver.com" target="_blank" rel="noopener">myVirtualserver.com
 				<br><br><img src="images/myvirtualserver_logo.png" alt="myVirtualserver" width="200" height="44" loading="lazy"></a></p>
 			</div>
 		</div>
-		<!-- Footer section end -->
-		<!-- Scroll up button start -->
+		<!-- Scroll up button -->
 		<a class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
-		<!-- Scroll up button end -->
 		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
 		<script>
 			for (let x of document.querySelectorAll('div.single-project')) x.classList.add('hidden');
