--- a/stats.html
+++ b/stats.html
@@ -55,10 +55,9 @@
 					<a class="nav-link" href="contribute.html">CONTRIBUTE</a>
 					<a class="nav-link" href="/#testimonials">TESTIMONIALS</a>
 				</div>
-				<!-- End main navigation -->
 			</div>
 		</nav>
-		<!-- Portfolio section start -->
+		<!-- Portfolio section -->
 		<div class="section secondary-section mixitup" id="stats">
 			<div class="container-xl">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
@@ -322,7 +321,7 @@
 				</div>
 			</div>
 		</div>
-		<!-- Footer section start -->
+		<!-- Footer section -->
 		<div class="section primary-section footer" id="contact">
 			<div class="container-xl">
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
@@ -339,16 +338,14 @@
 					</a>
 				</div>
 				<br>
-				<p>&copy; 2022 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
+				<p>&copy; 2023 DietPi created by <a href="https://dietpi.com/" target="_blank" rel="noopener">Daniel Knight</a></p>
 				<p>&copy; 2013 Website theme by <a href="https://www.graphberry.com/" target="_blank" rel="noopener">Graphberry</a></p>
 				<p>DietPi web hosting is powered by <a href="https://myvirtualserver.com" target="_blank" rel="noopener">myVirtualserver.com
 				<br><br><img src="images/myvirtualserver_logo.png" alt="myVirtualserver" width="200" height="44" loading="lazy"></a></p>
 			</div>
 		</div>
-		<!-- Footer section end -->
-		<!-- Scroll up button start -->
+		<!-- Scroll up button -->
 		<a class="scrollup" href="#"><svg viewBox="0 0 12 12"><path d="M1 8l5-5l5 5"/></svg></a>
-		<!-- Scroll up button end -->
 		<!-- Inline JavaScript to quickly show/hide elements if browser loads scripts -->
 		<script>
 			for (let x of document.querySelectorAll('div.single-project')) x.classList.add('hidden');
