--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 				<div class="da-slide da-slide-current">
 					<h2>DietPi v8.14 has been released</h2>
 					<h4>Check out all changes</h4>
-					<p>Orange Pi 5 images were added. Odroid N2 and HC4 images do now support USB boot/petitboot. Network and WiFi related dietpi-config options and connection check error handlers have received a lot of enhancements.</p>
+					<p>Orange Pi 5 images added; Odroid N2/HC4 images with USB boot/petitboot support; Initial experimental RISC-V support; Many improvements for dietpi-config Network/WiFi options, connection checks and error handlers</p>
 					<a class="da-link" href="https://dietpi.com/docs/releases/v8_14/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
