Add RISC-V VisionFive 2 to download page

--- a/index.html
+++ b/index.html
@@ -220,6 +220,7 @@
 					<button class="nav-link filter" data-filter=".asus">ASUS</button>
 					<button class="nav-link filter" data-filter=".nanopi">NanoPi</button>
 					<button class="nav-link filter" data-filter=".orangepi">Orange Pi</button>
+					<button class="nav-link filter" data-filter=".riscv">RISC-V</button>
 					<button class="nav-link filter" data-filter=".x86_64">PC/VM</button>
 					<button class="nav-link filter" data-filter=".other">Other</button>
 				</nav>
@@ -1269,6 +1270,26 @@
 						<div class="col-md-6"><img src="images/sbc_images/orange-pi-5.jpg" alt="Orange Pi 5 photo" width="8" height="5" loading="lazy"></div>
 					</div>
 				</div>
+				<!-- VisionFive 2 -->
+				<div id="visionfive2" class="single-project">
+					<div class="row"><div class="col-md-12 project-title"><h3>VisionFive 2 (experimental)</h3><span class="close"></span></div></div>
+					<div class="row">
+						<div class="col-md-6 project-description">
+							<div class="project-info">
+								<div><span>CPU:</span>StarFive JH7110 1.5 GHz | 4 cores | RISC-V 64-bit</div>
+								<div><span>RAM:</span>2 GiB - 8 GiB LPDDR4</div>
+								<div><span>USB:</span>2x USB 3.0, 2x USB 2.0, 1x USB-C PD</div>
+								<div><span>NET:</span>2x Gbit Ethernet</div>
+								<div><span>Storage:</span>microSD, eMMC and M.2 sockets</div>
+								<br>
+								<div><a href="https://dietpi.com/blog/?p=2629" target="_blank" rel="noopener"><span>How to install / Details:</span><i class="fa fa-book"></i><u>View</u></a></div>
+								<div><a href="https://github.com/MichaIng/DietPi/issues/6212" target="_blank" rel="noopener"><span>Testing feedback:</span><i class="fa fa-book"></i><u>View</u></a></div>
+							</div>
+							<p>A first experimental DietPi RISC-V image for the StarFive VisionFive 2 SBC. Please read the instructions given in our blog post lived above. Note that this is at best alpha state on all levels, DietPi, Debian and Linux.</p>
+						</div>
+						<div class="col-md-6"><img src="images/sbc_images/visionfive2.jpg" alt="VisionFive 2 photo" width="8" height="5" loading="lazy"></div>
+					</div>
+				</div>
 				<div id="portfolio-grid" class="row" style="display:none">
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix raspberrypi">
 						<a href="#downloadinfo" class="thumbnail" rel="#raspberrypi1">
@@ -1604,6 +1625,13 @@
 							<img src="images/sbc_images/nanopifire3.jpg" alt="NanoPi Fire3 photo" width="8" height="5" loading="lazy">
 							<h3>NanoPi Fire3</h3>
 							<p>S5P6818 1.4 GHz | 8 cores | ARMv8</p>
+						</a>
+					</div>
+					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix riscv">
+						<a href="#downloadinfo" class="thumbnail" rel="#visionfive2">
+							<img src="images/sbc_images/visionfive2.jpg" alt="VisionFive 2 photo" width="8" height="5" loading="lazy">
+							<h3>VisionFive 2</h3>
+							<p>JH7110 1.5 GHz | 4 cores | RISC-V</p>
 						</a>
 					</div>
 					<div class="col-xl-2 col-lg-3 col-md-4 col-6 mix x86_64">
