--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.14 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>Orange Pi 5 images added; Odroid N2/HC4 images with USB boot/petitboot support; Initial experimental RISC-V support; Many improvements for dietpi-config Network/WiFi options, connection checks and error handlers</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_14/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi v8.15 beta is here</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>RISC-V StarFive VisionFive 2 image added, PINE64 Quartz64 gets kernel upgrade with lots of new features, Home Assistant update/reinstall issues solved, XRDP now TLS enabled OOTB</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/6211" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
