Add DietPi beta v8.16 slide

--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi v8.15 has been released</h2>
-					<h4>Check out all changes</h4>
-					<p>RISC-V StarFive VisionFive 2 image added, PINE64 Quartz64 gets upgrade to Linux v6.1.16 with many new features, XRDP has now TLS enabled on install, special Box64 builds for RISC-V, RK3588 and RPi 3 added</p>
-					<a class="da-link" href="https://dietpi.com/docs/releases/v8_15/" target="_blank" rel="noopener">Release notes</a>
+					<h2>DietPi beta v8.16 is here</h2>
+					<h4>Please help testing our upcoming release</h4>
+					<p>microblog.pub added to software catalogue, x86 GPU driver selection reworked for better control and Vulkan support, kernel upgrade for NanoPi R5S/R6S, service startup rework to align with systemd</p>
+					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/6281" target="_blank" rel="noopener">All info</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
