--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 				<svg class="triangle" viewBox="0 0 100 100" preserveAspectRatio="none" aria-hidden="true"><path d="M0 0h100l-50 100"/></svg>
 				<!-- Slide 1 -->
 				<div class="da-slide da-slide-current">
-					<h2>DietPi beta v8.16 is here</h2>
-					<h4>Please help testing our upcoming release</h4>
-					<p>microblog.pub added to software catalogue, x86 GPU driver selection reworked for better control and Vulkan support, kernel upgrade for NanoPi R5S/R6S, service startup rework to align with systemd</p>
-					<a class="da-link" href="https://github.com/MichaIng/DietPi/issues/6281" target="_blank" rel="noopener">All info</a>
+					<h2>DietPi v8.16 has been released</h2>
+					<h4>Check out all changes</h4>
+					<p>microblog.pub added to software catalogue, reworked display brightness and x86 GPU driver menus for better control and Vulkan support, kernel upgrade for NanoPi R5S/R6S and Quartz64, aligned service startup with systemd</p>
+					<a class="da-link" href="https://dietpi.com/docs/releases/v8_16/" target="_blank" rel="noopener">Release notes</a>
 					<div class="da-img"><img class="img-fluid" src="images/dietpi-logo_360x360.png" alt="DietPi logo" width="300" height="300" loading="lazy"></div>
 				</div>
 				<!-- Slide 2 -->
